--- a/odoo-custom-addons/kin_loading/views/loading_view.xml
+++ b/odoo-custom-addons/kin_loading/views/loading_view.xml
@@ -145,6 +145,7 @@
                 <tree string="Loading Programme" >
                     <field name="name" />
                     <field name="programme_date" />
+                    <field name="state" />
                 </tree>
             </field>
         </record>
@@ -1228,13 +1229,14 @@
                             <field name="waybill_no" />
                             <field name="truck_no" />
                             <field name="ticket_date" />
-                            <field name="dpr_info_id" context="{'loading_programme_date':parent.programme_date}" domain="[('customer_id','=',partner_id)]" options="{'no_open':True,'no_create':True}"  />
+                            <field name="dpr_info_id" invisible="1"  />
+                            <field name="receiving_station_address" readonly="1" force_save="1"  />
                             <field name="dpr_status"  />
                             <field name="dpr_no" readonly="1"   force_save="1"/>
                             <field name="location_addr_id" />
                               <field name="dpr_expiry_date" readonly="1" force_save="1"  />
                             <field name="customer_address" readonly="1" />
-                            <field name="receiving_station_address" invisible="1" />
+
                             <field name="receiving_station_management" />
                             <field name="receiving_manager_phone" />
                             <field name="loader_id" />
@@ -1456,13 +1458,13 @@ f
                             <field name="waybill_no" />
                             <field name="truck_no" />
                             <field name="ticket_date" />
-                            <field name="dpr_info_id" domain="[('customer_id','=',partner_id)]" options="{'no_open':True,'no_create':True}"  />
+                             <field name="dpr_info_id" invisible="1"  />
+                            <field name="receiving_station_address" readonly="1" force_save="1"  />
                            <field name="dpr_status" readonly="1" />
                             <field name="dpr_no" />
                             <field name="location_addr_id" />
                              <field name="dpr_expiry_date" readonly="1" force_save="1"  />
                             <field name="customer_address" readonly="1" />
-                            <field name="receiving_station_address" invisible="1" />
                             <field name="receiving_station_management" />
                             <field name="receiving_manager_phone" />
                             <field name="loader_id" />
@@ -1775,13 +1777,13 @@ f
                             <field name="waybill_no" />
                             <field name="truck_no" />
                             <field name="ticket_date" />
-                            <field name="dpr_info_id" domain="[('customer_id','=',partner_id)]" options="{'no_open':True,'no_create':True}"  />
+                              <field name="dpr_info_id" invisible="1"  />
+                            <field name="receiving_station_address" readonly="1" force_save="1"  />
                             <field name="dpr_status" readonly="1" />
                             <field name="dpr_no" />
                             <field name="location_addr_id" />
                               <field name="dpr_expiry_date" readonly="1" force_save="1"  />
                             <field name="customer_address" readonly="1" />
-                            <field name="receiving_station_address" invisible="1" />
                             <field name="receiving_station_management" />
                             <field name="receiving_manager_phone" />
                             <field name="loader_id" />
