--- a/odoo-custom-addons/agary/views/stock.xml
+++ b/odoo-custom-addons/agary/views/stock.xml
@@ -59,11 +59,21 @@
                 <field name="model">product.template</field>
                 <field name="inherit_id" ref="product.product_template_form_view"/>
                 <field name="arch" type="xml">
+                     <div name="options" position="inside" >
+                       <div>
+                           <field name="has_commission" />
+                           <label for="has_commission"/>
+                       </div>
+                    </div>
                     <field name="categ_id" position="after"  >
                         <field name="other_category_id" options="{'no_open': True, 'no_create': True}"  />
                     </field>
                 </field>
         </record>
+
+
+
+
 
     </data>
 </odoo>
