--- a/odoo-custom-addons/heyden/views/loading.xml
+++ b/odoo-custom-addons/heyden/views/loading.xml
@@ -131,6 +131,10 @@
                     <field name="emp_hey_id" required="1" options ="{'no_open':True,'no_create':True}"  />
                 </field>
 
+                <xpath expr="//tree/field[@name='account_id']" position="attributes" >
+                    <attribute name="optional" >show</attribute>
+                </xpath>
+
                 <xpath expr="//tree/field[@name='price_unit']" position="attributes" >
                     <attribute name="optional" >show</attribute>
                 </xpath>
