--- a/odoo-custom-addons/stock_card_report/reports/stock_card_report.xml
+++ b/odoo-custom-addons/stock_card_report/reports/stock_card_report.xml
@@ -108,7 +108,7 @@
                                 t-value="product_line.picking_id.purchase_id.partner_id.name"
                             />
                         </t>
-                        <t t-if="product_line.picking_id.sale_id" >
+                        <t t-if="product_line.sudo().picking_id.sale_id" >
                             <t
                                 t-set="details"
                                 t-value="product_line.picking_id.sale_id.partner_id.name"
