--- a/odoo-custom-addons/fibernet/views/sale_view.xml
+++ b/odoo-custom-addons/fibernet/views/sale_view.xml
@@ -10,6 +10,10 @@
 		    <field name="groups_id" eval="[(6, 0, [ref('sales_team.group_sale_salesman_all_leads')])]"/>
         </record>
 
+        <record model="ir.ui.menu" id="sale_management.sale_order_template_menu">
+		    <field name="groups_id" eval="[(6, 0, [ref('fibernet.group_show_quotation_templates_fibernet')])]"/>
+        </record>
+
 
         <!-- Location -->
         <record id="view_location_form" model="ir.ui.view">
